--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
         <title>Odin Project: Landing Page</title>
     </head>
     <body>
-        The Rabbit has Landed
+        <div class="section-one">
+        <div class="header">
+            <h1>Header Logo</h1>
+            <a href="#">Header Link One</a>
+            <a href="#">Header Link Two</a>
+            <a href="#">Header Link Three</a>
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <img href="#" alt="this is a placeholder image">
+        </div>
+        <div class="section-two">
+            <h2>Some random information</h2> 
+            <img href="#" alt="img">
+            <div>This is some subtext under an illustration or an image</div>
+            <img href="#" alt="img">
+            <div>This is some subtext under an illustration or an image</div>
+            <img href="#" alt="img">
+            <div>This is some subtext under an illustration or an image</div>
+            <img href="#" alt="img">
+            <div>This is some subtext under an illustration or an image</div>
+        </div>
+        <div class="section-three">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p>-Thor, God of Thunder</p>
+        </div>
+        <div class="section-four">
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="footer">
+            <p>Copyright (c) The Odin Project</p>
+        </div>
     </body>
 </html>
