adjust position for flexbox

--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <meta charset="UTF-8">
-        <title>Odin Project: Landing Page</title>
-    </head>
-    <body>
-        <div class="section-one">
+
+<head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Odin Project: Landing Page</title>
+</head>
+
+<body>
+    <div class="section-one">
         <div class="header">
-            <h1>Header Logo</h1>
+            <h1 class="logo-text">Header Logo</h1>
             <a href="#">Header Link One</a>
             <a href="#">Header Link Two</a>
             <a href="#">Header Link Three</a>
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <img href="#" alt="this is a placeholder image">
         </div>
-        <div class="section-two">
-            <h2>Some random information</h2> 
+        <div class="hero">
+            <div class="hero-text">
+                <h2 class="hero-header">This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is
+                    lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image">
+                <img href="#" alt="this is a placeholder image">
+            </div>
+        </div>
+    </div>
+    <div class="section-two">
+        <h2 class="information-header">Some random information</h2>
+        <div class="section-two-boxes">
             <img href="#" alt="img">
             <div>This is some subtext under an illustration or an image</div>
             <img href="#" alt="img">
@@ -27,17 +40,20 @@
             <img href="#" alt="img">
             <div>This is some subtext under an illustration or an image</div>
         </div>
-        <div class="section-three">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
-        </div>
-        <div class="section-four">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign Up</button>
-        </div>
-        <div class="footer">
-            <p>Copyright (c) The Odin Project</p>
-        </div>
-    </body>
+    </div>
+    <div class="section-three">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="section-four">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign Up</button>
+    </div>
+    <div class="footer">
+        <p>Copyright (c) The Odin Project</p>
+    </div>
+</body>
+
 </html>
