--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="section-one">
+    <span class="section-one">
         <div class="header">
             <h1 class="logo-text">Header Logo</h1>
             <a href="#">Header Link One</a>
@@ -27,8 +27,8 @@
                 <img href="#" alt="this is a placeholder image">
             </div>
         </div>
-    </div>
-    <div class="section-two">
+    </span>
+    <span class="section-two">
         <h2 class="information-header">Some random information</h2>
         <div class="section-two-boxes">
             <img href="#" alt="img">
@@ -40,20 +40,20 @@
             <img href="#" alt="img">
             <div>This is some subtext under an illustration or an image</div>
         </div>
-    </div>
-    <div class="section-three">
+    </span>
+    <span class="section-three">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
-    </div>
-    <div class="section-four">
+    </span>
+    <span class="section-four">
         <p>Call to action! It's time!</p>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign Up</button>
-    </div>
-    <div class="footer">
+    </span>
+    <span class="footer">
         <p>Copyright (c) The Odin Project</p>
-    </div>
+    </span>
 </body>
 
 </html>
