section 2 boxes border

--- a/index.html
+++ b/index.html
@@ -31,18 +31,27 @@
     <span class="section-two">
         <h2 class="information-header">Some random information</h2>
         <div class="section-two-boxes">
-            <img href="#" alt="img">
-            <div>This is some subtext under an illustration or an image</div>
-            <img href="#" alt="img">
-            <div>This is some subtext under an illustration or an image</div>
-            <img href="#" alt="img">
-            <div>This is some subtext under an illustration or an image</div>
-            <img href="#" alt="img">
-            <div>This is some subtext under an illustration or an image</div>
+            <div>
+                <img href="#" alt="img">
+                This is some subtext under an illustration or an image
+            </div>
+            <div>
+                <img href="#" alt="img">
+                This is some subtext under an illustration or an image
+            </div>
+            <div>
+                <img href="#" alt="img">
+                This is some subtext under an illustration or an image
+            </div>
+            <div>
+                <img href="#" alt="img">
+                This is some subtext under an illustration or an image
+            </div>
         </div>
     </span>
     <span class="section-three">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+            or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
     </span>
