--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <span class="section-one">
         <div class="header">
             <h1 class="logo-text">Header Logo</h1>
-            <a href="#">Header Link One</a>
-            <a href="#">Header Link Two</a>
-            <a href="#">Header Link Three</a>
+            <div class="header-links">
+                <a href="#">Header Link One</a>
+                <a href="#">Header Link Two</a>
+                <a href="#">Header Link Three</a>
+            </div>
         </div>
         <div class="hero">
             <div class="hero-text">
@@ -24,12 +26,12 @@
                 <button>Sign up</button>
             </div>
             <div class="hero-image">
-                <img href="#" alt="this is a placeholder image">
+                <img href="#" alt="this is a placeholder for an image">
             </div>
         </div>
     </span>
     <span class="section-two">
-        <h2 class="information-header">Some random information</h2>
+        <h2 class="information-header">Some random information.</h2>
         <div class="section-two-boxes">
             <div>
                 <img href="#" alt="img">
