section 2 box size / spacing

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
         <h2 class="information-header">Some random information.</h2>
         <div class="section-two-boxes">
             <div>
-                <img href="#" alt="img">
-                This is some subtext under an illustration or an image
+                <img href="#" alt="">
+                This is some subtext under an illustration or image
             </div>
             <div>
-                <img href="#" alt="img">
-                This is some subtext under an illustration or an image
+                <img href="#" alt="">
+                This is some subtext under an illustration or image
             </div>
             <div>
-                <img href="#" alt="img">
-                This is some subtext under an illustration or an image
+                <img href="#" alt="">
+                This is some subtext under an illustration or image
             </div>
             <div>
-                <img href="#" alt="img">
-                This is some subtext under an illustration or an image
+                <img href="#" alt="">
+                This is some subtext under an illustration or image
             </div>
         </div>
     </span>
