--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
             or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <p class="quote-author">-Thor, God of Thunder</p>
     </span>
     <span class="section-four">
         <p>Call to action! It's time!</p>
