call to action flex position

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         <p class="quote-author">-Thor, God of Thunder</p>
     </span>
     <span class="section-four">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign Up</button>
+        <div>
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
     </span>
     <span class="footer">
         <p>Copyright (c) The Odin Project</p>
