--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <p class="quote-author">-Thor, God of Thunder</p>
     </span>
     <span class="section-four">
-        <div>
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="call-to-action">
+            <p class="call-head">Call to action! It's time!</p>
+            <p class="call-body">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign up</button>
     </span>
